--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <button class="button button__primary">Primary</button>
+            <button class="button button__primary button_disabled">Primary disabled</button>
+            <button class="button button__secondary">Secondary</button>
+            <button class="button button__secondary button_disabled">Secondary disabled</button>
+            <button class="button button__alternate">Alternate</button>
+            <button class="button button__alternate button_disabled">Alternate disabled</button>
+        </div>
     </body>
 </html>
